--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>保罗的小宇宙</title>
+    <title>旭旭旭</title>
     <link href="Css/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="icon" href="https://paugram.com/usr/themes/single/img/icon/32.png" sizes="32x32"/>
     <link rel="icon" href="https://paugram.com/usr/themes/single/img/icon/192.png" sizes="192x192"/>
@@ -22,7 +22,7 @@
 <body>
 <header>
     <div class="head-title">
-        <h4>保罗的小宇宙</h4>
+        <h4>旭旭旭</h4>
     </div>
     <div class="toggle-btn"></div>
     <div class="light-btn"></div>
