--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="http://nsczx.club/Css/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="icon" href="https://paugram.com/usr/themes/single/img/icon/32.png" sizes="32x32"/>
     <link rel="icon" href="https://paugram.com/usr/themes/single/img/icon/192.png" sizes="192x192"/>
-    <link href="Css/single.css" rel="stylesheet" type="text/css"/>
-    <link href="Css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="http://nsczx.club/Css/single.css" rel="stylesheet" type="text/css"/>
+    <link href="http://nsczx.club/Css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <!--<link href="Css/font-awesome.min.css" rel="stylesheet" type="text/css"/>-->
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
     <style>body:before{content:''; display:block;  opacity:.06; z-index:-1; position:fixed; top:0; bottom:0; left:0; right:0; background: url(Images/152d5ba1fd3445fa8eeceb3c96f666b8.gif) center/cover no-repeat;}</style>
