--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>保罗的小宇宙</title>
-    <link href="Css/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="http://nsczx.club//paugram.com/Css/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="icon" href="https://paugram.com/usr/themes/single/img/icon/32.png" sizes="32x32"/>
     <link rel="icon" href="https://paugram.com/usr/themes/single/img/icon/192.png" sizes="192x192"/>
     <link href="Css/single.css" rel="stylesheet" type="text/css"/>
